...
            NABodyText(title, fontSize = fontSize, modifier = Modifier.weight(1f))

            // Checks the isExpanded state to decide which arrow to show
            if (isExpanded) {
                Icon(
                    painter = painterResource(R.drawable.expanded),
                    contentDescription = "Arrow that collapses dropdown",
                    modifier = Modifier.size(24.dp),
                    tint = Color.Unspecified
                )
            } else {
                Icon(
                    painter = painterResource(R.drawable.collapsed),
...
            else NABodyText("Farve: " + "black", fontWeight = FontWeight.SemiBold)


            Row() {
                Icon(
                    painter = painterResource(R.drawable.white_circle),
                    contentDescription = "White color circle",
                    modifier = Modifier
                        // When clicked it shows white bra
                        .clickable { isColorSelected = true },
                    tint = Color.Unspecified
                )

                Spacer(modifier = Modifier.width(8.dp))

                Icon(
                    painter = painterResource(R.drawable.black_circle),
                    contentDescription = "Black color circle",
                    modifier = Modifier
                        // When clicked it shows black bra
                        .clickable { isColorSelected = false }
                )
            }

...
        ) {
            NABodyText("799,99 kr", fontWeight = FontWeight.SemiBold)

            Row() {
                Icon(
                    painter = painterResource(R.drawable.minus_icon),
                    contentDescription = "minus icon",
                    tint = Color.Unspecified,
                    modifier = Modifier
                        // When clicked it makes sure quantity can't go below 1
                        .clickable {
                            if (quantity > 1) quantity--
                        }
...
                NABodyText(quantity.toString())

                Spacer(modifier = Modifier.width(5.dp))

                Icon(
                    painter = painterResource(R.drawable.plus_icon),
                    contentDescription = "plus icon",
                    tint = Color.Unspecified,
                    modifier = Modifier
                        // When clicked it adds one to the counter
                        .clickable {
                            quantity++
                        }
...
            // When text is collapsed it shows ... to tell user there is more to read
            overflow = TextOverflow.Ellipsis
        )

        Text(
            // Shows "læs mindre" if text is open otherwise shows "læs mere" when collapsed
            text = if (isExpanded) "Læs mindre" else "Læs mere",
            color = NAtextBlack,
            fontWeight = FontWeight.Bold,
            modifier = Modifier
                // Flips state when clicking text
                .clickable { isExpanded = !isExpanded }
                .padding(top = 4.dp)
...
